# biproductions

./: .gitignore  Dockerfile  Jenkinsfile  README.md  analogical-notebook.ipynb  biproductions.cabal  classy-prelude-template.cabal  entrypoint.sh  package.yaml  stack.yaml
app/: Main.hs
src/: BiProductionsLib.hs  ClassyPreludeTemplateLib.hs  EnglishExamples.hs
test/: Main.hs
