name:                 classy-prelude-template
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               TBillTech
maintainer:           TBillTechAdmin (at) TBillTech dt com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  ghc-options:          -Wall -O2
  exposed-modules:      ClassyPreludeTemplateLib
  build-depends:        base-noprelude
                      , classy-prelude
                      , mtl
                      , optparse-applicative
                      , singletons
                      -- Needed for Text.Read
                      , text
                      , time
                      , transformers
  hs-source-dirs:       src
  default-language:     Haskell2010
  default-extensions:   ApplicativeDo
                      , BangPatterns
                      , ConstraintKinds
                      , DataKinds
                      , DefaultSignatures
                      , DeriveFoldable
                      , DeriveFunctor
                      , DeriveGeneric
                      , DeriveLift
                      , DeriveTraversable
                      , DerivingStrategies
                      , EmptyCase
                      , ExistentialQuantification
                      , FlexibleContexts
                      , FlexibleInstances
                      , FunctionalDependencies
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , InstanceSigs
                      , KindSignatures
                      , LambdaCase
                      , MultiParamTypeClasses
                      , MultiWayIf
                      , NamedFieldPuns
                      , NoImplicitPrelude
                      , OverloadedLists
                      , OverloadedStrings
                      , PatternSynonyms
                      , RankNTypes
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TupleSections
                      , TypeApplications
                      , TypeFamilies
                      , TypeFamilyDependencies
                      , TypeOperators

executable classy-prelude-template-exe
  ghc-options:          -Wall -threaded -O2
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base-noprelude
                      , classy-prelude-template
                      , classy-prelude
                      , mtl
                      , optparse-applicative
                      , singletons
                      -- Needed for Text.Read
                      , text
                      , time
                      , transformers
  hs-source-dirs:       app
  default-language:     Haskell2010
  default-extensions:   ApplicativeDo
                      , BangPatterns
                      , ConstraintKinds
                      , DataKinds
                      , DefaultSignatures
                      , DeriveFoldable
                      , DeriveFunctor
                      , DeriveGeneric
                      , DeriveLift
                      , DeriveTraversable
                      , DerivingStrategies
                      , EmptyCase
                      , ExistentialQuantification
                      , FlexibleContexts
                      , FlexibleInstances
                      , FunctionalDependencies
                      , GADTs
                      , GeneralizedNewtypeDeriving
                      , InstanceSigs
                      , KindSignatures
                      , LambdaCase
                      , MultiParamTypeClasses
                      , MultiWayIf
                      , NamedFieldPuns
                      , NoImplicitPrelude
                      , OverloadedLists
                      , OverloadedStrings
                      , PatternSynonyms
                      , RankNTypes
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TupleSections
                      , TypeApplications
                      , TypeFamilies
                      , TypeFamilyDependencies
                      , TypeOperators

